// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tokens/Color Base 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#000",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-base-black
      </span>
      <span
        className="label"
      >
        #000
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-base-white
      </span>
      <span
        className="label"
      >
        #fff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-base-transparent
      </span>
      <span
        className="label"
      >
        transparent
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Brand 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 300,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#B4D1FE",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-blue-angel
      </span>
      <span
        className="label"
      >
        #B4D1FE
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#7B61FF",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-light-slate-blue
      </span>
      <span
        className="label"
      >
        #7B61FF
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#E5E5E5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-mercury
      </span>
      <span
        className="label"
      >
        #E5E5E5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#595F68",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-mid-gray
      </span>
      <span
        className="label"
      >
        #595F68
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#676E79",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-mist-blue
      </span>
      <span
        className="label"
      >
        #676E79
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#3B3F45",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-charcoal-gray
      </span>
      <span
        className="label"
      >
        #3B3F45
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#FEB4EF",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-blossom-ping
      </span>
      <span
        className="label"
      >
        #FEB4EF
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#FB0ECC",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-brand-shocking-ping
      </span>
      <span
        className="label"
      >
        #FB0ECC
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Color Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#B4D1FE",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-primary
      </span>
      <span
        className="label"
      >
        #B4D1FE
      </span>
    </div>
  </div>
</div>
`;
